--- a/README.html
+++ b/README.html
@@ -1,10 +1,10 @@
 <body style="background-color: #09000F;">
-<h1 style="color: #ffffff;">Vortex Utilities</h1>
+<h1 style="color: #ffffff; font-family:  Arial, sans-serif;">Vortex Utilities</h1>
 
 <style>
   .button-link {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 20px 20px;
     background-color: #600596;
     color: white;
     text-decoration: none;
@@ -14,7 +14,7 @@
   }
 </style>
 
-<a class="button-link">
+<a class="button-link" style="font-family: Arial">
   Tree
 </a>
 </body>
