--- a/VortexUtilities.html
+++ b/VortexUtilities.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Circle of Buttons with Center Text</title>
+<title>Vortex Utilities</title>
 <style>
   body {
     display: flex;
