--- a/VortexUtilities.html
+++ b/VortexUtilities.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Vortex Utilities</title>
+<link rel="icon" href="https://via.placeholder.com/32?text=Logo" type="image/png" />
 <style>
   body {
     display: flex;
