--- a/VortexUtilities.html
+++ b/VortexUtilities.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Vortex Utilities</title>
- <link rel="icon" href="https://images.stockcake.com/public/9/a/3/9a3dc41e-78ec-4443-bde2-20784c2ec833_large/cosmic-purple-spiral-stockcake.jpg" type="image/jpeg" />
+ <link rel="icon" href="swirl.jpg" type="image/jpeg" />
 <style>
   body {
     display: flex;
