--- a/VortexUtilities.html
+++ b/VortexUtilities.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Vortex Utilities</title>
- <link rel="icon" href="swirl_32x32.jpg" type="image/jpg" />
+ <link rel="icon" type="image/x-icon' href="swirl_32x32.ico" />
 <style>
   body {
     display: flex;
