--- a/VortexUtilities/ScrappedDictionary.html
+++ b/VortexUtilities/ScrappedDictionary.html
@@ -24,7 +24,7 @@
     align-items: center;
     justify-content: center;
     transform: translateY(-50%);
-    z-index: 10; /* Ensure on top */
+    z-index: 10; 
   }
   .left-button {
     left: 10px;
@@ -32,15 +32,15 @@
   .right-button {
     right: 10px;
   }
-  
-   /* Image container between divider and top of box */
+
+
  .image-container {
     position: absolute;
-    top: calc(12% - 60px); /* adjusted to be above the title area, can be tuned */
+    top: calc(12% - 43px); 
     left: 50%;
     transform: translateX(-50%);
-    width: 130px; /* smaller width */
-    height: 130px; /* smaller height */
+    width: 130px; 
+    height: 130px; 
   }
   .image-container img {
     width: 100%;
@@ -49,23 +49,22 @@
     border-radius: 8px;
   }
 
-  /* Style for the 500x600 center box with fill color and white outline */
   .center-box {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 500px;
-    height: 600px;
-    background-color: #170126; /* Box fill color */
-    border: 4px solid #fff; /* White outline */
+    height: 450px;
+    background-color: #170126;
+    border: 4px solid #fff;
     border-radius: 10px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
   }
 
-  /* The line positioned at 30% height of the box */
+
   .top-line {
     height: 2px;
     background-color: #fff;
@@ -73,27 +72,27 @@
     margin-top: calc(30% - 1px);
   }
 
-  /* Container for main content elements (title, description, stats, mutual) */
+
   .content-area {
     flex: 1;
     position: relative;
   }
 
-  /* Title - keep centered at top area */
+
   .title {
     position: absolute;
-    top: 10px;
+    top: -5px;
     width: 100%;
     text-align: center;
     color: #fff;
-    font-size: 1.4em;
+    font-size: 1.8em;
     margin: 0;
   }
 
-  /* Description on the left side */
+ 
   .description {
     position: absolute;
-    top: 20%;
+    top: 25%;
     left: 10px;
     transform: translateY(-50%);
     width: 100%;
@@ -104,9 +103,9 @@
 
   .stats {
     position: absolute;
-    bottom: 100px; 
+    bottom: 50px; 
     left: 10px;
-    width: 40%;
+    width: 100%;
     color: #fff;
     font-size: 1.2em;
   }
@@ -123,7 +122,7 @@
   
     /* Style for arrow SVGs */
   .arrow {
-    fill: #fff; /* Arrow color white */
+    fill: #fff; 
     width: 24px;
     height: 24px;
   }
